@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+July 10, 2011
+! [mickael] improved some CMakeLists files linked to the build of applications which used thirdparty
+
 _______ R812 : 'openjpeg-1.5' branch created ______________________________
 
 July 10, 2011
